# localair.github.io

./: 404.html  CNAME  README.md  index.html  mkdocs.yml  properdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
contact/: index.html
css/: extra.css
data/: index.html
data-sources/: index.html
deployment/: index.html
docs/: contact.md  data-sources.md  data.md  deployment.md  faq.md  index.md  join.md  sensor.md  team.md
faq/: index.html
join/: index.html
search/: search_index.json
sensor/: index.html
team/: index.html
theme/: main.html
theme/css/: extra.css
